# matchstick

./: .gitignore  CMakeLists.txt  README.md
matchstick/: compile.cpp  compile.h  compile_consts.h  destruct.c  destruct.cpp  destruct.h  matchstick.c  matchstick.cpp  matchstick.h  types.cpp  types.h  types_private.h
test/: simple.c  simple.cpp
